<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TestOpenErpActivity!</string>
    <string name="app_name">TestOpenErp</string>
    <string name="connection_error">Problème de connecxion avec OpenERP</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_connection_screen">ConnectionScreen</string>
    <string name="dbname">Database</string>
    <string name="username">Login</string>
    <string name="password">Password</string>
    <string name="connectionButton">Connection</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="clientsButton">Menu Clients</string>
    <string name="produitsButton">Menu Produits</string>
    <string name="bonDeCommandeButton">Bons de Commande</string>
    <string name="title_activity_menu_produits">MenuProduits</string>
    <string name="title_activity_menu_client">MenuClient</string>
    <string name="title_activity_menu_commande">MenuCommande</string>
    <string name="cancel">ok</string>
    <string name="title_activity_partner_info">PartnerInfo</string>
    <string name="title_activity_product_info">ProductInfo</string>
    <string name="name_prod">Produit</string>
    <string name="code">Code</string>
    <string name="categ">Categorie</string>
    <string name="price">Prix</string>
    <string name="qte">Quantité</string>
    <string name="partner_name">Nom</string>
    <string name="website">Site web</string>
    <string name="address">Adresse</string>
    <string name="type">Type</string>
    <string name="function">Fonction</string>
    <string name="email">Email</string>
    <string name="phone">Tel</string>
    <string name="mobile">Mobile</string>
    <string name="fax">Fax</string>
    <string name="title_activity_menu_products">MenuProducts</string>
    <string name="hint">Search item</string>
    <string name="getSaleOrder">Afficher Bon de commande</string>
    <string name="title_activity_bon_de_commande_client">BonDeCommandeClient</string>
    <string name="bon_name">Titre</string>
    <string name="bon_state">Etat</string>
    <string name="bon_dateOrder">Date de commande</string>
    <string name="bon_tax">Taxe</string>
    <string name="bon_partnerName">Client</string>

    <color name="blue">#003399</color>

    <string name="title_activity_new_sale_order">NewSaleOrder</string>
    <string name="title_activity_new_sale_order_line">NewSaleOrderLine</string>
    <string name="order_ref">Reference</string>
    <string name="order_date">Date</string>
    <string name="order_partner">Partner</string>
    <string name="order_state">State</string>
    <string name="order_newLine">add new order line</string>
    <string name="order_select_date">Select a date</string>
    <string name="line_product">Produit</string>
    <string name="line_qte">Quantité</string>
    <string name="line_discount">Discount</string>
    <string name="ok">ok</string>
    <string name="title_activity_partner_sale_order_list">PartnerSaleOrderList</string>
    <string name="title_activity_partner_new_sale_order">PartnerNewSaleOrder</string>

</resources>