<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
     >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical|center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/ButtonBonsCommande"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/saleorder"
                android:text="@string/bonDeCommandeButton"
                />

            <Button
                android:id="@+id/buttonClients"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/client"
                android:text="@string/clientsButton"
                />

            <Button
                android:id="@+id/ButtonProduits"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/produits"
                android:text="@string/produitsButton"
                />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="nouveau bon de commande"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
