<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="19dp"
                android:text="@string/order_ref" />

            <EditText
                android:id="@+id/order_edit_ref"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingLeft="5dip" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_partner" />

            <Spinner
                android:id="@+id/order_edit_partner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="13dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/order_date" />

            <TextView
                android:id="@+id/order_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="35dip"
                android:text="@string/order_select_date" />

            <Button
                android:id="@+id/order_button_date"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_menu_today"
                android:height="17dip"
                android:paddingLeft="10dip"
                android:width="17dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_weight="1" >

            <Button
                android:id="@+id/order_addLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="add line"
                android:visibility="invisible" />

            <Button
                android:id="@+id/order_createOrder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="create" />

            <Button
                android:id="@+id/order_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="delete"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>